--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 # Ignore Byebug command history file.
 .byebug_history
 public/uploads/*
-# config/secrets.yml
+config/secrets.yml
 .DS_Store
 .env
 .env.production
